# lab.ratrig.com

./: 404.html  CNAME  README.md  index.html  mkdocs.yml  pyproject.toml  rr_mkdocs_plugin.py  serve.sh  sitemap.xml
.github/workflows/: build_docs.yml
assets/vc31_beast_enclosure/: printed_parts.csv
assets/vc31_idex/: bom.csv  printed_parts.csv
assets/vc31_idex_wide/: bom.csv  printed_parts.csv
assets/vcast_1_0/: bom_idex_additions.csv  bom_wide.csv  printed_parts.csv
assets/vcast_1_5/: bom.csv  bom_wide.csv  printed_parts.csv
cad/components/: HW1016NC-Aluminium Spacer - 3mm.step  HW1035WC-Timing Pulley - 2GT-20T - For 6mm Belt - 5mm Bore.step  HW1305BC-Inside Hidden Corner Bracket - for 3030.step  HW1309WC-Ball Bearing - F688ZZ.step  HW1555GC-V-Slot Door Handle.step  HW1630NC-Mini Precision Shim - 8x5x1mm.step  HW1832BC-Inside Hidden Three Way Corner - Black - 3030.step  HW1848GC-Hinge - Black thermoplastic - for 3030 - 45mm Length.step  HW1896GC-FlexPlate Set - Powder coated PEI 410x410mm.step  HW1914PC-Joining Plate for 3030 - T - Black Anodized.step  HW1916BC-Cast 90 Degree Corner Bracket for 3030 - 6 Slot - Black.step  HW2037BC-Cast 90 Degree Corner Bracket for 4040 - 8 Slot - Natural.step  (+21 more)
cad_library/: index.html
css/: extra.css
discontinued/: index.html
non_commercial/: index.html
official_mods/: index.html
search/: search_index.json
upcoming_prototype/: index.html
vc31_beast_enclosure/: index.html
vc31_idex/: index.html
vc31_idex_wide/: index.html
vcast_1_0/: index.html
vcast_1_5/: index.html
vminion_1_1/: index.html
(+82 files in other folders)
